fix link github

--- a/newtab.html
+++ b/newtab.html
@@ -34,6 +34,8 @@
         <ul id="taskList"></ul>
     </div>
 
+
+
     <!-- <div id="calendar-popup" class="hidden glass-effect">
         <div class="calendar-header">
             <button id="prev-month">&lt;</button>
@@ -48,7 +50,9 @@
         <div class="calendar-footer">
             <button id="close-calendar">Đóng</button>
         </div>
-    </div> -->
+    </div>
+ -->
+
 
     <div id="settings-modal" class="hidden">
         <div class="modal-content glass-effect">
@@ -109,7 +113,7 @@
                         "Underwear can rip, but the PC must be maxed out!"
                     </blockquote>
                     <p>
-                        <a href="https://github.com/DUTVcore/Dm_Dung_Luoi_Nua" target="_blank" style="color: #89b4fa; text-decoration: none; font-weight: bold;">[Github]</a>
+                        <a href="https://github.com/DUTVcore/Focus_tab" target="_blank" style="color: #89b4fa; text-decoration: none; font-weight: bold;">[Click here to view the source code on GitHub]</a>
                     </p>
                     <div style="text-align: center; margin-top: 10px;">
                         <img src="qr.jpg" alt="QR Code" class="qr-img">
